@@ -1,1 +1,1 @@
-DIST zram-init-2.tar.gz 2264 RMD160 eb03b71aebaec8c251cab6fb79ebd771cae57a81 SHA1 396527e0278d344a0171e34b745edafeca51bd10 SHA256 d3d42cf0de1b01898aea480545b5612f1bc4ab6ab89bb8737fa45983c17a634c
+DIST zram-init-2.1.tar.gz 2875 RMD160 4f02719cfab477799f1a4473edbab286d981d273 SHA1 bde5b28941d8625cbb76e21b34db0757fe878354 SHA256 080d00d5d67bb603de72e6193366f15e5326aba360270c7afa7d78347d9e3c58
