@@ -1,4 +1,4 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header $
 
@@ -6,21 +6,27 @@ EAPI="4"
 RESTRICT="mirror"
 
 DESCRIPTION="Scripts to support compressed swap devices or ramdisks with zram"
-HOMEPAGE="http://www.mathematik.uni-wuerzburg.de/~vaeth/download/index.html"
-SRC_URI="http://www.mathematik.uni-wuerzburg.de/~vaeth/download/${P}.tar.gz"
+HOMEPAGE="https://github.com/vaeth/${PN}"
+SRC_URI="http://github.com/vaeth/${PN}/tarball/release-${PV} -> ${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="zsh-completion"
 
+src_unpack() {
+	default
+	cd *"${PN}"-*
+	S="${PWD}"
+}
+
 src_install() {
-	dosbin zram-init
-	newinitd zram-init.initd zram-init
-	newconfd zram-init.confd zram-init
+	dosbin sbin/*
+	doinitd openrc/init.d/*
+	doconfd openrc/conf.d/*
 	if use zsh-completion
 	then	insinto /usr/share/zsh/site-functions
-		doins _zram-init
+		doins zsh/*
 	fi
 }
 
