@@ -1,0 +1,8 @@
+# ChangeLog for dev-util/pyrep
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header $
+
+*pyrep-1.1 (02 Mar 2012)
+
+  02 Mar 2012; Martin Väth <martin@mvath.de>
+  New ebuild from scratch.
