@@ -1,6 +1,13 @@
 # ChangeLog for sys-block/zram-init
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
+
+*zram-init-2.1.ebuild (02 Mar 2012)
+
+  02 Mar 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild. Changes to github repository.
+
+*zram-init-2.0.ebuild (08 Feb 2010)
 
   08 Feb 2010; Martin Väth <martin@mvath.de>
   Complete rewrite. Remove old ChangeLog.
